--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -24,6 +24,16 @@
 			</div>
 		</div>
 
+		<!--<div index="10" heading="价格设置" ng-if="saleobj.id !== '' && funobj.hasOwnProperty('juyousubsidy')">-->
+		<div index="10" heading="价格设置" >
+			<div class="panel panel-default">
+				<div class="panel-heading">价格设置</div>
+				<div class="panel-body">
+					<productinfo-price-calendar saleobj="saleobj" util="util"></productinfo-price-calendar>
+				</div>
+			</div>
+		</div>
+
 		<div index="1" heading="限制信息" ng-if="saleobj.id !== '' && saleobj.code !== ''">
 			<div class="panel panel-default">
 				<div class="panel-heading">限制信息</div>
