--- a/app/07product/views/priceCalendar.html
+++ b/app/07product/views/priceCalendar.html
@@ -184,7 +184,7 @@
 			</button>
                 </div>
                 <div class="fc-center">
-                    <h2>{{obj.y}}年{{obj.m + 1}}月</h2>
+                    <h2>{{obj.y}}年<font size=6>{{obj.m + 1}}月</font></h2>
                 </div>
                 <div class="fc-right">
                     <button type="button" class="fc-next-button fc-button fc-state-default fc-corner-left fc-corner-right" ng-click="back()">
