--- a/app/07product/views/productinfoPriceCalendar.html
+++ b/app/07product/views/productinfoPriceCalendar.html
@@ -1,5 +1,8 @@
 <div>
     <style type="text/css">
+        .red {
+            color: red;
+        }
         .fc {
             width: 100%;
             min-height: 100px;
@@ -159,16 +162,6 @@
 
     <div class="container zhaoGuXiaoPingMu">
 
-
-        <div class="col-xs-12">
-            <!--<button class="btn btn-success" ng-click="add()">增加</button>&nbsp;&nbsp;&nbsp;&nbsp;-->
-            <div class="col-xs-2 mt10">
-                <button class="btn btn-warning btn-block" ng-click="update()">更改</button>
-            </div>
-        <br/><br/>
-        </div>
-
-
         <div class="fc col-xs-12 mt10">
 
 
@@ -181,7 +174,7 @@
 			</button>
                 </div>
                 <div class="fc-center">
-                    <h2>{{obj.y}}年{{obj.m + 1}}月</h2>
+                    <h2>{{obj.y}}年<font size=6>{{obj.m + 1}}月</font></h2>
                 </div>
                 <div class="fc-right">
                     <button type="button" class="fc-next-button fc-button fc-state-default fc-corner-left fc-corner-right" ng-click="back()">
@@ -196,7 +189,7 @@
                 <table>
                     <thead>
                         <tr>
-                            <th ng-repeat="w in weekarr">{{w}}</th>
+                            <th ng-repeat="w in weekarr" ng-bind-html="w"></th>
                         </tr>
                     </thead>
                     <tbody class="rq">
