--- a/app/07product/views/priceCalendar.html
+++ b/app/07product/views/priceCalendar.html
@@ -3,12 +3,13 @@
         .red {
             color: red;
         }
+
         .fc {
             width: 100%;
             min-height: 100px;
             background: #fff;
         }
-        
+
         .fc-toolbar {
             height: 50px;
             background-color: #23b7e5;
@@ -16,77 +17,77 @@
             border-radius: 3px 3px 0 0;
             text-align: center;
         }
-        
+
         .fc-toolbar h2 {
             font-size: 20px;
             line-height: 50px;
             margin: 0;
             text-transform: uppercase;
         }
-        
+
         .fc-toolbar .fc-left {
             float: left;
         }
-        
+
         .fc-toolbar .fc-right {
             float: right;
         }
-        
+
         .fc-toolbar .fc-center {
             display: inline-block;
         }
         /* the things within each left/right/center section */
-        
+
         .fc .fc-toolbar>*>* {
             /* extra precedence to override button border margins */
             float: left;
             margin-left: .75em;
         }
         /* the first thing within each left/center/right section */
-        
+
         .fc .fc-toolbar>*> :first-child {
             /* extra precedence to override button border margins */
             margin-left: 0;
         }
         /* title text */
-        
+
         .fc-toolbar h2 {
             margin: 0;
         }
         /* button layering (for border precedence) */
-        
+
         .fc-toolbar button {
             position: relative;
         }
-        
+
         .fc-toolbar .fc-state-hover,
         .fc-toolbar .ui-state-hover {
             z-index: 2;
         }
-        
+
         .fc-toolbar .fc-state-down {
             z-index: 3;
         }
-        
+
         .fc-toolbar .fc-state-active,
         .fc-toolbar .ui-state-active {
             z-index: 4;
         }
-        
+
         .fc-toolbar button:focus {
             z-index: 5;
         }
-        
+
         .fc-toolbar button {
             position: relative;
         }
-        
+
         .fc button .fc-icon {
             position: relative;
             top: .05em;
             margin: 0 .1em;
         }
-        
+
         .fc-icon {
             display: inline-block;
             font-size: 2em;
@@ -94,22 +95,22 @@
             height: .5em;
             font-family: "Courier New", Courier, monospace;
         }
-        
+
         .fc-icon-right-single-arrow:after {
             content: "\0203A";
             font-weight: bold;
         }
-        
+
         .fc-icon-left-single-arrow:after {
             content: "\02039";
             font-weight: bold;
         }
-        
+
         .fc {
             direction: ltr;
             text-align: left;
         }
-        
+
         .fc-toolbar .fc-button {
             color: #fff;
             background: transparent;
@@ -121,7 +122,7 @@
             line-height: 28px;
             padding: 10px;
         }
-        
+
         .fc th,
         .fc td {
             border-style: solid;
@@ -138,17 +139,17 @@
             border-color: #e3eaef;
             font-weight: normal;
         }
-        
+
         .fc th {
             text-align: center;
         }
-        
+
         .fc-view table {
             width: 100%;
             border-color: #e3eaef;
             font-weight: normal;
         }
-        
+
         .rq td {
             height: 70px;
         }
@@ -156,7 +157,6 @@
         .zhaoGuXiaoPingMu {
             width: 100%;
         }
-
     </style>
 
 
@@ -165,10 +165,10 @@
 
         <div class="col-xs-12">
             <!--<button class="btn btn-success" ng-click="add()">增加</button>&nbsp;&nbsp;&nbsp;&nbsp;-->
-            <div class="col-xs-2 mt10">
+            <!--<div class="col-xs-2 mt10">
                 <button class="btn btn-warning btn-block" ng-click="update()">更改</button>
-            </div>
-        <br/><br/>
+            </div>-->
+            <br/><br/>
         </div>
 
 
@@ -179,18 +179,26 @@
             <div class="fc-toolbar">
                 <div class="fc-left">
                     <button type="button" class="fc-prev-button fc-button fc-state-default fc-corner-left fc-corner-right" ng-click="pre()">
-				<span class="fc-icon fc-icon-left-single-arrow"></span>
-				{{obj.m == 0 ? 12 : obj.m}}月
-			</button>
+                        <span class="fc-icon fc-icon-left-single-arrow"></span>
+                        {{obj.m == 0 ? 12 : obj.m}}月
+                    </button>
                 </div>
-                <div class="fc-center">
-                    <h2>{{obj.y}}年<font size=6>{{obj.m + 1}}月</font></h2>
+                <div class="col-xs-2 mt10 fc-left">
+                    <button class="btn btn-info btn-block" ng-click="update()">批量设置</button>
+                </div>
+                <div class="fc-center ">
+                    <h2>{{obj.y}}年
+                        <font size=6>{{obj.m + 1}}月</font>
+                    </h2>
                 </div>
                 <div class="fc-right">
                     <button type="button" class="fc-next-button fc-button fc-state-default fc-corner-left fc-corner-right" ng-click="back()">
-				{{obj.m + 2 == 13 ? 1 : obj.m + 2}}月
-				<span class="fc-icon fc-icon-right-single-arrow"></span>
-			</button>
+                        {{obj.m + 2 == 13 ? 1 : obj.m + 2}}月
+                        <span class="fc-icon fc-icon-right-single-arrow"></span>
+                    </button>
+                </div>
+                <div class="col-xs-2 mt10 fc-right" >
+                    <button class="btn btn-info btn-block" ng-click="">批量下架</button>
                 </div>
             </div>
 
