--- a/app/07product/views/detailinfo.html
+++ b/app/07product/views/detailinfo.html
@@ -10,7 +10,7 @@
 
 <div class="panel panel-primary custom-panel">
 	<div class="panel-heading text-center">
-		<font face="Courier" class="" size="5">对接对接详情</font>
+		<font face="Courier" class="" size="5">对接产品详情</font>
 	</div>
 	<div class="panel-body">
    
