--- a/app/14statistics/views/usedStatistics.html
+++ b/app/14statistics/views/usedStatistics.html
@@ -23,7 +23,7 @@
 						<button type="button" class="btn btn-info search pull-right btn-block" ng-click="load()">立即搜索</button>
 					</div>
 					<div class="col-sm-2 pull-right">
-						<button type="button" class="btn btn-default search pull-right btn-block" ng-click="exportToExcel('#Excel_table')">Excel</button>
+						<button type="button" class="btn btn-default search pull-right btn-block" ng-click="exportToExcel('#Excel_table')">导出</button>
 						<a id="dlink" download="{{ExcelName}}.xls" ng-show="false"></a>
 					</div>
 				</div>
