--- a/app/14statistics/views/usedStatistics.html
+++ b/app/14statistics/views/usedStatistics.html
@@ -5,7 +5,7 @@
 				<div class="row ">
 					<div class="col-sm-2">
 						<select class="form-control" ng-model="viewcode" 
-							ng-options="view.code as view.name for view in viewarr" ng-change="change(viewcode)">
+							ng-options="view.code as view.name for view in attrarr" ng-change="change(viewcode)">
                   			<option value=""> -- 全部景区 -- </option>
               			</select> &nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
